# SpriteCore

./: CMakeLists.txt  README.md  vcpkg.json
include/SpriteBattle/: BattleNode.hpp  BattleQueue.hpp  BattleResult.hpp  SpriteBattle.hpp
include/SpriteClient/: AuthenticatedState.hpp  Context.hpp  ExitState.hpp  State.hpp  UnauthenticatedState.hpp
include/SpriteCore/: Stirps.hpp
include/SpriteServer/controller/: BattleController.hpp  HttpController.hpp
include/SpriteServer/mapper/: Mapper.hpp  SpriteMapper.hpp  UserMapper.hpp
include/SpriteServer/pojo/: JsonSprite.hpp  User.hpp
include/SpriteServer/pojo/DTO/: BattleRequest.hpp  LoginRequest.hpp
include/SpriteServer/service/: BattleService.hpp  ServiceManager.hpp  SpriteService.hpp  UserService.hpp
include/SpriteServer/service/impl/: BattleServiceImpl.hpp  SpriteServiceImpl.hpp  UserServiceImpl.hpp
include/SpriteServer/utils/: MessageQueue.hpp  concurrentqueue.h
include/sprite/: Level.hpp  Sprite.hpp  Type.hpp
libs/SpriteCore/: .gitignore  CMakeLists.txt
libs/SpriteCore/include/SpriteCore/: Buff.hpp  Factory.hpp  Level.hpp  Sprite.hpp  Stirps.hpp
libs/SpriteCore/include/SpriteCore/utils/: RandomUtil.hpp
libs/SpriteCore/src/: Sprite.cpp  Stirps.cpp  main.cpp
src/: Sprite.cpp  Stirps.cpp  Type.cpp  User.cpp  main.cpp
src/SpriteClient/: AuthenticatedState.cpp  Context.cpp  State.cpp  UnauthenticatedState.cpp
